Ticket #7353 - use authtrail gem and write tests

--- a/app/views/security_mailer/notify.html.erb
+++ b/app/views/security_mailer/notify.html.erb
@@ -4,7 +4,18 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <%= simple_format(I18n.t("mail_body_security_#{@type}_alert".to_sym), username: @user.name, id_address: @user.current_sign_in_ip) %>
-    <%= simple_format(I18n.t(:mail_footer_security_alert, support_email: CONFIG['support_email'], privacy_policy: link_to(t(:privacy_policy), CONFIG['privacy_policy_url']))) %>
+    <%= simple_format(I18n.t("mail_body_security_#{@type}_alert".to_sym,
+    	username: @user.name,
+    	ip_address: @user.current_sign_in_ip,
+    	device_name: @user_agent.os
+    	)) %>
+    <%= simple_format(I18n.t(:mail_footer_security_alert, 
+    	timestamp: @timestamp,
+    	browser: @user_agent.browser,
+    	os: @user_agent.os,
+    	location: @location,
+    	support_email: CONFIG['support_email'], 
+    	privacy_policy: link_to(t(:privacy_policy), CONFIG['privacy_policy_url'])
+    	)) %>
   </body>
 </html>
