Ticket #7353 - set right base_url and platform for notification mails

--- a/app/views/security_mailer/_footer.html.erb
+++ b/app/views/security_mailer/_footer.html.erb
@@ -9,7 +9,7 @@
                                 <th class="footer" style="font-weight: normal; padding: 0;" align="left">
                                   <p class="h4 text-gray" style="color: #9a9a9a !important; font-size: 15px; line-height: 20px; margin: 0;">
                                     <%= I18n.t("mail_security.privacy", 
-                                      manage: link_to(t("mail_security.manage_text"), "#{CONFIG['checkdesk_base_url']}/check/me/privacy"), 
+                                      manage: link_to(t("mail_security.manage_text"), "#{CONFIG['checkdesk_client']}/check/me/privacy"), 
                                       privacy: link_to(t("mail_security.privacy_text"), CONFIG['privacy_policy_url'])
                                       ).html_safe %>
                                     <br></p>
