--- a/app/views/security_mailer/_footer.html.erb
+++ b/app/views/security_mailer/_footer.html.erb
@@ -8,8 +8,8 @@
                               <tr>
                                 <th class="footer" style="font-weight: normal; padding: 0;" align="left">
                                   <p class="h4 text-gray" style="color: #9a9a9a !important; font-size: 15px; line-height: 20px; margin: 0;">
-                                    <%= I18n.t("mail_security.privacy", 
-                                      manage: link_to(t("mail_security.manage_text"), "#{CONFIG['checkdesk_client']}/check/me/privacy"), 
+                                    <%= I18n.t("mail_security.privacy",
+                                      manage: link_to(t("mail_security.manage_text"), "#{CONFIG['checkdesk_client']}/check/me/privacy"),
                                       privacy: link_to(t("mail_security.privacy_text"), CONFIG['privacy_policy_url'])
                                       ).html_safe %>
                                     <br></p>
@@ -30,7 +30,7 @@
                             <table cellpadding="0" cellspacing="0" border="0" width="auto" style="border-top: 1px solid #e3e3e3; border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                               <tr>
                                 <th class="footer" style="font-weight: normal; padding: 0;" align="left">
-                                  <p class="h4 text-gray" style="color: #9a9a9a !important; font-size: 15px; line-height: 20px; margin-top: 10px;"><%= I18n.t("mail_security.copy_right", app_name: CONFIG['app_name']) %><br></p>
+                                  <p class="h4 text-gray" style="color: #9a9a9a !important; font-size: 15px; line-height: 20px; margin-top: 10px;"><%= I18n.t("mail_security.copyright_html", app_name: CONFIG['app_name']) %><br></p>
                                 </th>
                               </tr>
                             </table>
