--- a/app/views/security_mailer/_footer.html.erb
+++ b/app/views/security_mailer/_footer.html.erb
@@ -30,7 +30,7 @@
                             <table cellpadding="0" cellspacing="0" border="0" width="auto" style="border-top: 1px solid #e3e3e3; border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                               <tr>
                                 <th class="footer" style="font-weight: normal; padding: 0;" align="left">
-                                  <p class="h4 text-gray" style="color: #9a9a9a !important; font-size: 15px; line-height: 20px; margin-top: 10px;"><%= html_safe I18n.t("mail_security.copyright_html", app_name: CONFIG['app_name']) %><br></p>
+                                  <p class="h4 text-gray" style="color: #9a9a9a !important; font-size: 15px; line-height: 20px; margin-top: 10px;"><%= I18n.t("mail_security.copyright_html", app_name: CONFIG['app_name']).html_safe %><br></p>
                                 </th>
                               </tr>
                             </table>
