--- a/app/views/task_mailer/notify.html.erb
+++ b/app/views/task_mailer/notify.html.erb
@@ -36,7 +36,7 @@
                 <tr>
                   <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="left">
                     <div class="notify-title__content">
-                      <div class="h3 notify-title__proj" style="font-size: 21px; letter-spacing: -0.2px; line-height: 29px;"><%= I18n.t("mail_security.greeting", username: @user.name) %><</div>
+                      <div class="h3 notify-title__proj" style="font-size: 21px; letter-spacing: -0.2px; line-height: 29px;"><%= I18n.t("mail_security.greeting", username: @user.name) %></div>
                       <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                         <tr>
                           <td style="border-collapse: collapse; font-size: 5px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
