--- a/app/views/security_mailer/notify.text.erb
+++ b/app/views/security_mailer/notify.text.erb
@@ -22,5 +22,5 @@
 
 ...
 
-<%= strip_tags I18n.t("mail_security.copyright_html", app_name: CONFIG['app_name']) %>
+<%= strip_tags I18n.t("mails_notifications.copyright_html", app_name: CONFIG['app_name']) %>
 https://meedan.com
