--- a/app/views/terminal_status_mailer/notify.html.erb
+++ b/app/views/terminal_status_mailer/notify.html.erb
@@ -35,7 +35,7 @@
                 <tr>
                   <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="left">
                     <div class="notify-title__content">
-                      <div class="h3 notify-title__proj" style="font-size: 21px; letter-spacing: -0.2px; line-height: 29px;"><%= I18n.t("mails_notifications.greeting", username: @info[:username]) %></div>
+                      <div class="h3 notify-title__proj" style="font-size: 21px; letter-spacing: -0.2px; line-height: 29px;"><%= I18n.t("mails_notifications.media_status.greeting") %></div>
                       <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                         <tr>
                           <td style="border-collapse: collapse; font-size: 13px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
@@ -49,7 +49,7 @@
                       </table>
                       <div class="text-gray" style="color: #757575 !important;">
                         <div class="h3" style="font-size: 21px; letter-spacing: -0.2px; line-height: 30px;">
-                        	<%= I18n.t("mails_notifications.media_status.header_text", author: @info[:author], project: @info[:project], team: @info[:team]).html_safe %>
+                        	<%= I18n.t("mails_notifications.media_status.header_text", author: @info[:author], project: "<strong>#{@info[:project]}</strong>", team: @info[:team]).html_safe %>
                         </div>
                       </div>
                     </div>
@@ -67,20 +67,25 @@
                       <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
                         <tr>
                           <td class="section__title" style="padding: 5px 0px;" align="left">
-                            <a class="h3 link" href=<%= @info[:media_url] %> style="font-size: 21px; letter-spacing: -0.2px; line-height: 29px; font-weight: bold !important; color: #0d6cf7 !important; text-decoration: none;">
-                              <%= @info[:title] %>
-                            </a></td>
+                            <%= link_to(@info[:title], @info[:media_url], :class => 'h3 link', :style => "font-size: 21px; letter-spacing: -0.2px; line-height: 29px; font-weight: bold !important; color: #0d6cf7 !important; text-decoration: none;") %>
+                          </td>
                         </tr>
                         <tr style="text-align:left;vertical-align:baseline">
-                          <td class="section__title" style="padding: 23px 0px 14px 0px;" align="left"><img height="20" width="20" style="font-size:14px; height:20px; width:20px; line-height:20px; border-radius:4px; vertical-align:top" src=<%= @info[:profile_image] %>&nbsp;
-                            <span class="span text text-gray" style="font-size: 14px; line-height: 18px; color: #757575 !important;">
-                              <%= "#{@info[:author]} (#{@info[:author_role]}) - #{@info[:updated_at]}" %>
-                            </span>
+                          <td class="section__title" style="padding: 23px 0px 14px 0px;" align="left">
+                            <div class="text-gray" style="color: #757575 !important;">
+                              <%= image_tag(@info[:profile_image], height: "20", width: "20", style: "font-size:14px; height:20px; width:20px; line-height:20px; border-radius:4px; vertical-align:top") %>
+                              &nbsp;
+                              <span class="span text text-gray" style="font-size: 14px; line-height: 18px; color: #757575 !important;">
+                                <%= "#{@info[:author]} (#{@info[:author_role]}) - #{@info[:updated_at]}" %>
+                              </span>
+                            </div>
                           </td>
                         </tr>
                         <tr>
                           <td class="section__title" style="padding: 23px 30px;" bgcolor="#fff" align="left">
-                          	<%= I18n.t('mails_notifications.media_status.section_title', status: @info[:status]) %>
+                            <div class="span text" style="font-size: 15px; line-height: 15px;">
+                          	 <%= I18n.t('mails_notifications.media_status.section_title', status: @info[:status]) %>
+                            </div>
                           </td>
                         </tr>
                       </table>
@@ -98,11 +103,10 @@
                             <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                               <tr>
                                 <td style="border-collapse: collapse; padding-right: 14px;">
-                                  <a href=<%= @info[:media_url] %> style="text-decoration: none !important;">
-                                	 <span class="span" style="color: #fff !important; font-size: 17px; font-weight: bold; line-height: 20px;">
-                                		<%= I18n.t("slack.fields.view_button", {type: I18n.t("activerecord.models.#{@info[:type]}"), app: CONFIG['app_name']}) %>
-                              		 </span>
-                                  </a></td>
+                              	 <span class="span" style="font-size: 17px; font-weight: bold; line-height: 20px;">
+                              		<%= link_to(I18n.t("slack.fields.view_button", {type: I18n.t("mails_notifications.media_status.label"), app: CONFIG['app_name']}), @info[:media_url], :style => "color: #fff !important; text-decoration: none !important;") %>
+                            		 </span>
+                                </td>
                                 <td style="border-collapse: collapse;" align="right"><img src="https://images.ctfassets.net/g118h5yoccvd/1ji47bOy90143djFnEPuj1/936ebe3388362a7861715a1b819b231b/arrow_3x.png" alt="arrow-icon" width="7" style="-ms-interpolation-mode: bicubic; border: 0 none; height: auto; line-height: 100%; outline: none; text-decoration: none;">
                                 </td>
                               </tr>
@@ -164,17 +168,26 @@
                             <div class="section" style="background-color: #fff; text-align: !important;">
                               <!-- Section title-->
                               <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-                                <tr>
-                                  <td class="section__title" style="padding: 23px 30px;" bgcolor="#fff" align="left">
-                                    <span class="span text" style="font-size: 17px; line-height: 20px;">
-                                      <%= @info[:description] %>
-                                    </span></td>
-                                </tr>
-                                <tr>
-                                  <td class="media-list__image" style="border-collapse: collapse; overflow: hidden; padding-left: 30px; padding-right: 20px;" width="520px" height="auto" valign="top">
-                                    <img src=<%= "#{@info[:image_path]}" %> alt="" width="520" style="-ms-interpolation-mode: bicubic; border: 0 none; height: auto; line-height: 100%; outline: none; text-decoration: none; width: 520px;">
-                                  </td>
-                                </tr>
+                                <% if !@info[:description].blank? %>
+                                  <tr>
+                                    <td class="section__title" style="padding: 23px 30px;" bgcolor="#fff" align="left">
+                                      <span class="span text" style="font-size: 17px; line-height: 20px;">
+                                        <%= @info[:description] %>
+                                      </span></td>
+                                  </tr>
+                                <% end %>
+                                <% if !@info[:image_path].blank? %>
+                                  <tr>
+                                    <td class="media-list__image" style="border-collapse: collapse; overflow: hidden; padding-left: 30px; padding-right: 20px;" width="520px" height="auto" valign="top">
+                                      <%= image_tag(@info[:image_path], width: "520", style: "-ms-interpolation-mode: bicubic; border: 0 none; height: auto; line-height: 100%; outline: none; text-decoration: none; width: 520px;") %>
+                                    </td>
+                                  </tr>
+                                <% end %>
+                                <% if !@info[:media_link].blank? %>
+                                  <tr>
+                                    <td class="section__description" style="padding: 23px 30px;" bgcolor="#fff" align="left"><a href=<%= @info[:media_link] %> class="span text text-gray" style="font-size: 14px; line-height: 18px; color: #757575 !important; text-decoration:none;"><%= @info[:media_link] %></a></td>
+                                  </tr>
+                                <% end %>
                               </table>
                               <!-- Section content-->
                               <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
@@ -241,7 +254,7 @@
                                               </div>
                                               <div class="text-gray" style="color: #9a9a9a !important;">
                                                 <span class="span" style="font-size: 15px; line-height: 15px;">
-                                                  <%= @info[:updated_at] %>
+                                                  <%= @info[:created_at] %>
                                                 </span>
                                               </div>
                                             </div>
@@ -269,7 +282,7 @@
                                                   </tr>
                                                 </table>
                                               </div>
-                                              <div class="text-gray" style="color: #9a9a9a !important;"><span class="span" style="font-size: 15px; line-height: 15px;">March 21st 12:35 PM</span>
+                                              <div class="text-gray" style="color: #9a9a9a !important;"><span class="span" style="font-size: 15px; line-height: 15px;"><%= @info[:last_update] %></span>
                                                 <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                                                   <tr class="rowgap" style="display: block;">
                                                     <td style="border-collapse: collapse; font-size: 5px; line-height: 1;">&nbsp;</td>
@@ -388,14 +401,12 @@
                               <tr>
                                 <th class="footer" style="font-weight: normal; padding: 0;" align="left">
                                   <p class="h4 text-gray" style="color: #9a9a9a !important; font-size: 15px; line-height: 20px; margin: 0;">
-                                    <a class="link" href=<%= @info[:media_url] %> style="color: #0d6cf7 !important; text-decoration: none;">
-                                      <%= I18n.t("slack.fields.view_button", {type: I18n.t("activerecord.models.#{@info[:type]}"), app: CONFIG['app_name']}) %>
-                                      </a> • 
-                                      <a class="link" href=<%= @info[:project_url] %> style="color: #0d6cf7 !important; text-decoration: none;">
-                                        <%= I18n.t("mails_notifications.media_status.project_view") %>
-                                      </a> • 
+                                      <%= link_to(I18n.t("slack.fields.view_button", {type: I18n.t("mails_notifications.media_status.label"), app: CONFIG['app_name']}), @info[:media_url], :class => 'link', :style => "color: #0d6cf7 !important; text-decoration: none;") %>
+                                       • 
+                                        <%= link_to(I18n.t("mails_notifications.media_status.project_view"), @info[:project_url], :class => 'link', :style => "color: #0d6cf7 !important; text-decoration: none;") %>
+                                       • 
                                       <%= I18n.t("mails_notifications.unsubscribe_link", 
-                                          unsubscribe: link_to(I18n.t("mails_notifications.unsubscribe"), "#{CONFIG['checkdesk_client']}/check/me/edit")).html_safe %>
+                                          unsubscribe: link_to(I18n.t("mails_notifications.unsubscribe"), "#{CONFIG['checkdesk_client']}/check/me/edit", :class => "link", :style => "color: #0d6cf7 !important; text-decoration: none;")).html_safe %>
                                     <br></p>
                                 </th>
                               </tr>
