--- a/app/views/terminal_status_mailer/notify.text.erb
+++ b/app/views/terminal_status_mailer/notify.text.erb
@@ -17,12 +17,12 @@
 <%= @info[:description] %>
 <%= I18n.t(:oembed_notes) %> (<%= @info[:notes] %>)
 <%= I18n.t("mails_notifications.media_status.added_to", app_name: CONFIG['app_name']) %> (<%= @info[:created_at] %>)
-<%= I18n.t("mails_notifications.media_status.update_h") %> (<%= @info[:last_update] %>)
+<%= I18n.t("mails_notifications.media_status.update_h") %> (<%= @info[:updated_at] %>)
 <%= I18n.t("activerecord.models.project") %> (<%= @info[:project] %>)
 <%= I18n.t("mails_notifications.media_status.tasks_h") %> (<%= "#{@info[:resolved_tasks]}/#{@info[:total_tasks]}" %>)
 ...
 
-<%= I18n.t("mails_notifications.media_status.project_view") %>
+<%= I18n.t("mails_notifications.project_view") %>
 <%= @info[:project_url] %>
 
 <%= I18n.t("mails_notifications.unsubscribe_link", unsubscribe: I18n.t("mails_notifications.unsubscribe")) %>
