Ticket #7522 - fix CC, tests and notify assigner

--- a/app/views/task_mailer/notify.text.erb
+++ b/app/views/task_mailer/notify.text.erb
@@ -8,7 +8,7 @@
 
 <%= @info[:title] %>
 
-<%= "#{@info[:author]} (#{@info[:role]}) - #{@info[:updated_at]}" %>
+<%= "#{@info[:author]} (#{@info[:role]}) - #{@info[:created_at]}" %>
 > <%= @info[:response] %>
 
 <%= @info[:button] %>
