--- a/app/views/task_mailer/notify.html.erb
+++ b/app/views/task_mailer/notify.html.erb
@@ -112,7 +112,7 @@
                               <%= image_tag(@info[:profile_image], height: "20", width: "20", style: "font-size:14px; height:20px; width:20px; line-height:20px; border-radius:4px; vertical-align:top") %>
                               &nbsp;
                               <span class="span text text-gray" style="font-size: 14px; line-height: 18px; color: #757575 !important;">
-                                <%= "#{@info[:author]} (#{@info[:role]}) - #{@info[:updated_at]}" %>
+                                <%= "#{@info[:author]} (#{@info[:role]}) - #{@info[:created_at]}" %>
                               </span>
                             </div>
                           </td>
