--- a/app/views/security_mailer/notify.html.erb
+++ b/app/views/security_mailer/notify.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: "header" %>
+<%= render "shared/header" %>
 
           <style>
             @media only screen and (max-width: 601px) {
@@ -28,7 +28,7 @@
                 <tr>
                   <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="left">
                     <div class="notify-title__content">
-                      <div class="h3 notify-title__greeting" style="font-size: 21px; letter-spacing: -0.2px; line-height: 29px;"><%= I18n.t("mail_security.greeting", username: @user.name) %></div>
+                      <div class="h3 notify-title__greeting" style="font-size: 21px; letter-spacing: -0.2px; line-height: 29px;"><%= I18n.t("mails_notifications.greeting", username: @user.name) %></div>
                       <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                         <tr>
                           <td style="border-collapse: collapse; font-size: 13px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
@@ -234,6 +234,31 @@
                         }
                       }
                     </style>
+                    <div class="container wide" width="100%" style="margin: 0 auto; text-align: left;">
+                      <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
+                        <tr>
+                          <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="100%" valign="top" align="left">
+                            <table cellpadding="0" cellspacing="0" border="0" width="auto" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                              <tr>
+                                <th class="footer" style="font-weight: normal; padding: 0;" align="left">
+                                  <p class="h4 text-gray" style="color: #9a9a9a !important; font-size: 15px; line-height: 20px; margin: 0;">
+                                    <%= I18n.t("mail_security.privacy",
+                                      manage: link_to(t("mail_security.manage_text"), "#{CONFIG['checkdesk_client']}/check/me/privacy"),
+                                      privacy: link_to(t("mail_security.privacy_text"), CONFIG['privacy_policy_url'])
+                                      ).html_safe %>
+                                    <br></p>
+                                </th>
+                              </tr>
+                            </table>
+                            <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                              <tr>
+                                <td style="border-collapse: collapse; font-size: 40px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+                              </tr>
+                            </table>
+                          </th>
+                        </tr>
+                      </table>
+                    </div>
 
-<%= render partial: "footer" %>
+<%= render "shared/footer" %>
 
