--- a/app/views/security_mailer/notify.text.erb
+++ b/app/views/security_mailer/notify.text.erb
@@ -1,4 +1,4 @@
-<%= I18n.t("mail_security.greeting", username: @user.name) %>
+<%= I18n.t("mails_notifications.greeting", username: @user.name) %>
 =======================================================
 <%= I18n.t("mail_security.#{@type}", browser: @user_agent.browser, platform: @platform, location: @location) %>
 =======================================================
@@ -22,5 +22,5 @@
 
 ...
 
-<%= strip_tags I18n.t("mail_security.copyright_html", app_name: CONFIG['app_name']) %>
+<%= strip_tags I18n.t("mails_notifications.copyright_html", app_name: CONFIG['app_name']) %>
 https://meedan.com
