--- a/app/views/terminal_status_mailer/notify.text.erb
+++ b/app/views/terminal_status_mailer/notify.text.erb
@@ -1,3 +1,35 @@
-<%= I18n.t(:mail_update_status, @info) %>
+<%= I18n.t("mails_notifications.media_status.greeting") %>
 
-<%= I18n.t(:mail_see_it) %> <%= @project_media.full_url %>
+==========================================
+<%= I18n.t("mails_notifications.media_status.header_title") %>
+==========================================
+
+<%= I18n.t("mails_notifications.media_status.header_text", author: @info[:author], project: @info[:project], team: @info[:team]) %>
+
+<%= @info[:title] %>
+
+<%= "#{@info[:author]} (#{@info[:author_role]}) - #{@info[:updated_at]}" %>
+> <%= I18n.t('mails_notifications.media_status.section_title', status: @info[:status]) %>
+
+<%= I18n.t("slack.fields.view_button", {type: I18n.t("mails_notifications.media_status.label"), app: CONFIG['app_name']}) %>:
+<%= @info[:media_url] %>
+
+<%= @info[:description] %>
+<%= I18n.t(:oembed_notes) %> (<%= @info[:notes] %>)
+<%= I18n.t("mails_notifications.media_status.added_to", app_name: CONFIG['app_name']) %> (<%= @info[:created_at] %>)
+<%= I18n.t("mails_notifications.media_status.update_h") %> (<%= @info[:updated_at] %>)
+<%= I18n.t("activerecord.models.project") %> (<%= @info[:project] %>)
+<%= I18n.t("mails_notifications.media_status.tasks_h") %> (<%= "#{@info[:resolved_tasks]}/#{@info[:total_tasks]}" %>)
+...
+
+<%= I18n.t("mails_notifications.project_view") %>
+<%= @info[:project_url] %>
+
+<%= I18n.t("mails_notifications.unsubscribe_link", unsubscribe: I18n.t("mails_notifications.unsubscribe")) %>
+<%= "#{CONFIG['checkdesk_client']}/check/me/edit" %>
+
+...
+
+<%= strip_tags I18n.t("mails_notifications.copyright_html", app_name: CONFIG['app_name']) %>
+https://meedan.com
+
