Ticket #7522 - fix errbit error

--- a/app/views/task_mailer/notify.text.erb
+++ b/app/views/task_mailer/notify.text.erb
@@ -1,4 +1,4 @@
-<%= I18n.t("mails_notifications.media_status.greeting") %>
+<%= @info[:greeting] %>
 
 ==========================================
  <%= I18n.t("mails_notifications.task_resolved.header_title") %>
