--- a/app/views/terminal_status_mailer/notify.text.erb
+++ b/app/views/terminal_status_mailer/notify.text.erb
@@ -1,4 +1,4 @@
-<%= I18n.t("mails_notifications.media_status.greeting") %>
+<%= I18n.t("mails_notifications.greeting_all") %>
 
 ==========================================
 <%= I18n.t("mails_notifications.media_status.header_title") %>
