--- a/app/views/project_medias/oembed.html.erb
+++ b/app/views/project_medias/oembed.html.erb
@@ -45,8 +45,8 @@
         %>
         <% if meme %>
           <img src="<%= meme %>" class="oembed__meme" alt="" />
-        <% elsif @project_media.embed&.send(:[], 'provider') == 'youtube' && !@project_media.embed['html'].blank? %>
-          <%= @project_media.embed['html'].html_safe %>
+        <% elsif @project_media.metadata&.send(:[], 'provider') == 'youtube' && !@project_media.metadata['html'].blank? %>
+          <%= @project_media.metadata['html'].html_safe %>
         <% else %>
           <div id="oembed__content-content">
             <% unless picture.blank? %>
