--- a/app/views/assignment_mailer/_media.html.erb
+++ b/app/views/assignment_mailer/_media.html.erb
@@ -1,20 +1,34 @@
 <div class="container wide" width="600" style="margin: 0 auto; text-align: left; width: 600px;">
-  <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
+  <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-left: 8px solid #5CAE73; border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
     <tr>
       <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="left">
         <div class="section" style="background-color: #fff; text-align: !important;">
           <!-- Section title-->
-          <% if !@info[:description].blank? %>
-            <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+          <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+            <% if !@info[:description].blank? %>
               <tr>
                 <td class="section__title" style="padding: 23px 30px;" bgcolor="#fff" align="left">
                   <span class="span text" style="font-size: 17px; line-height: 20px;">
                     <%= @info[:description] %>
-                  </span>
+                  </span></td>
+              </tr>
+            <% end %>
+            <% if !@info[:image_path].blank? %>
+              <tr>
+                <td class="media-list__image" style="border-collapse: collapse; overflow: hidden; padding-left: 30px; padding-right: 20px;" width="520px" height="auto" valign="top">
+                  <%= image_tag(@info[:image_path], width: "520", style: "-ms-interpolation-mode: bicubic; border: 0 none; height: auto; line-height: 100%; outline: none; text-decoration: none; width: 520px;") %>
                 </td>
               </tr>
-            </table>
-          <% end %>
+            <% end %>
+            <% if !@info[:media_link].blank? %> 
+              <tr>
+                <td class="section__description" style="padding: 23px 30px;" bgcolor="#fff" align="left">
+                  <%= 
+                    link_to(@info[:media_link], @info[:media_link], :class => 'span text text-gray', :style => 'font-size: 14px; line-height: 18px; color: #757575 !important; text-decoration:none;') 
+                  %>
+              </tr>
+            <% end %>
+          </table>
           <!-- Section content-->
           <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
             <tr>
@@ -22,21 +36,25 @@
                 <style>
                   @media only screen and (max-width: 481px) {
                     body .media-info {
-                      padding-right: 30px !important;
-                      padding-left: 30px !important;
+                      padding-right: 20px !important;
+                      padding-left: 20px !important;
                     }
                   }
                 </style>
 
                 <!--~~//media-info module start \\~~-->
                 <!--————————————————————————————-->
-                
+                <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                  <tr>
+                    <td style="border-collapse: collapse; font-size: 33px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+                  </tr>
+                </table>
                 <div class="container wide" width="600" style="margin: 0 auto; text-align: left; width: 600px;">
                   <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
 
                     <tr>
                       <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="300px" valign="top" align="left">
-                        <div class="media-info" style="padding: 0px 30px; text-align: left;">
+                        <div class="media-info" style="padding-left: 30px; padding-right: 30px; text-align: left;">
                           <div>
                             <span class="span text-bold" style="font-size: 15px; font-weight: bold !important; line-height: 25px;">
                               <%= I18n.t("mails_notifications.assignment.#{@info[:event_type]}_by") %>
@@ -48,7 +66,7 @@
                             </table>
                           </div>
                           <div class="text-gray" style="color: #9a9a9a !important;">
-                            <span class="span" style="font-size: 15px; line-height: 20px;">
+                            <span class="span" style="font-size: 15px; line-height: 25px;">
                               <%= @info[:author] %>
                             </span>
                             <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
@@ -63,10 +81,64 @@
                         </div>
                       </th>
                       <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="300px" valign="top" align="left">
-                        <div class="media-info" style="padding: 0px 30px; text-align: left;">
+                        <div class="media-info" style="padding-left: 30px; padding-right: 30px; text-align: left;">
                           <div>
                             <span class="span text-bold" style="font-size: 15px; font-weight: bold !important; line-height: 15px;">
-                              <%= I18n.t('activerecord.models.project') %>
+                              <%= I18n.t("mails_notifications.media_status.added_to", app_name: CONFIG['app_name']) %>
+                            </span>
+                            <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                              <tr>
+                                <td style="border-collapse: collapse; font-size: 5px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+                              </tr>
+                            </table>
+                          </div>
+                          <div class="text-gray" style="color: #9a9a9a !important;">
+                            <span class="span" style="font-size: 15px; line-height: 15px;">
+                              <%= @info[:created_at] %>
+                            </span>
+                          </div>
+                        </div>
+                      </th>
+                    </tr>
+                  </table>
+                </div>
+                <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                  <tr>
+                    <td style="border-collapse: collapse; font-size: 15px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+                  </tr>
+                </table>
+                <div class="container wide" width="600" style="margin: 0 auto; text-align: left; width: 600px;">
+                  <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
+                    <tr>
+                      <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="300px" valign="top" align="left">
+                        <div class="media-info" style="padding-left: 30px; padding-right: 30px; text-align: left;">
+                          <div>
+                            <span class="span text-bold" style="font-size: 15px; font-weight: bold !important; line-height: 15px;">
+                              <%= I18n.t("mails_notifications.media_status.update_h") %>
+                            </span>
+                            <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                              <tr>
+                                <td style="border-collapse: collapse; font-size: 5px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+                              </tr>
+                            </table>
+                          </div>
+                          <div class="text-gray" style="color: #9a9a9a !important;"><span class="span" style="font-size: 15px; line-height: 15px;"><%= @info[:updated_at] %></span>
+                            <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                              <tr class="rowgap" style="display: block;">
+                                <td style="border-collapse: collapse; font-size: 5px; line-height: 1;">&nbsp;</td>
+                              </tr>
+                              <tr class="rowgap-mobile" style="display: none;">
+                                <td style="border-collapse: collapse; font-size: 5px; line-height: 1;">&nbsp;</td>
+                              </tr>
+                            </table>
+                          </div>
+                        </div>
+                      </th>
+                      <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="300px" valign="top" align="left">
+                        <div class="media-info" style="padding-left: 30px; padding-right: 30px; text-align: left;">
+                          <div>
+                            <span class="span text-bold" style="font-size: 15px; font-weight: bold !important; line-height: 15px;">
+                              <%= I18n.t("activerecord.models.project") %>
                             </span>
                             <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                               <tr>
@@ -89,20 +161,14 @@
                     <td style="border-collapse: collapse; font-size: 15px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
                   </tr>
                 </table>
-              
-                <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-                  <tr>
-                    <td style="border-collapse: collapse; font-size: 15px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
-                  </tr>
-                </table>
                 <div class="container wide" width="600" style="margin: 0 auto; text-align: left; width: 600px;">
                   <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
                     <tr>
                       <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="left">
-                        <div class="media-info" style="padding: 0px 30px; text-align: left;">
+                        <div class="media-info" style="padding-left: 30px; padding-right: 30px; text-align: left;">
                           <div>
                             <span class="span text-bold" style="font-size: 15px; font-weight: bold !important; line-height: 15px;">
-                              <%= I18n.t('mails_notifications.task_resolved.media_h') %>
+                              <%= I18n.t("mails_notifications.media_status.tasks_h") %>
                             </span>
                             <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                               <tr>
@@ -112,7 +178,7 @@
                           </div>
                           <div class="text-gray" style="color: #9a9a9a !important;">
                             <span class="span" style="font-size: 15px; line-height: 15px;">
-                              <%= link_to(@info[:media_title], @info[:url], :class => 'link', :style => "color: #0d6cf7 !important; text-decoration: none;") %>
+                              <%= "#{@info[:resolved_tasks]}/#{@info[:total_tasks]}" %>
                             </span>
                             <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                               <tr class="rowgap" style="display: block;">
