--- a/app/views/assignment_mailer/notify.text.erb
+++ b/app/views/assignment_mailer/notify.text.erb
@@ -1,1 +1,26 @@
+<%= @info[:greeting] %>
 
+==========================================
+<%= I18n.t("mails_notifications.assignment.#{@info[:event_key]}_title") %>
+==========================================
+<%= I18n.t("mails_notifications.assignment.#{@info[:event_key ]}_text", author: @info[:author], project: @info[:project], team: @info[:team]) %>
+
+
+<%= @info[:title] %>
+
+<%= "#{@info[:author]} (#{@info[:role]}) - #{@info[:created_at]}" %>
+> <%=
+	I18n.t("mails_notifications.assignment.#{@info[:event_type]}_log",
+					model: I18n.t("activerecord.models.#{@info[:model]}"),
+	        username: @info[:username],
+	        author: @info[:author],
+        )
+  %>
+
+<%= @info[:button] %>
+<%= @info[:url] %>
+
+<%= render @info[:model]  %>
+
+<%= strip_tags I18n.t("mails_notifications.copyright_html", app_name: CONFIG['app_name']) %>
+https://meedan.com
