--- a/app/views/assignment_mailer/notify.text.erb
+++ b/app/views/assignment_mailer/notify.text.erb
@@ -20,7 +20,7 @@
 <%= @info[:button] %>
 <%= @info[:url] %>
 
-<%= render @info[:model]  %>
+<%= render @info[:model] rescue render "project"  %>
 
 <%= strip_tags I18n.t("mails_notifications.copyright_html", app_name: CONFIG['app_name']) %>
 https://meedan.com
