--- a/app/views/team_user_mailer/request_to_join_processed.text.erb
+++ b/app/views/team_user_mailer/request_to_join_processed.text.erb
@@ -1,8 +1,27 @@
-Request to join <%= @team.name %> on <%= CONFIG['app_name'] %>
-==========================================
+<%= @info[:greeting] %>
 
-<% if @accepted %>
-<%= I18n.t(:mail_view_joined, team: @team.name, url: @url) %>
-<% else %>
-<%= I18n.t(:mail_view_rejected_to_join, team: @team.name) %>
+<% if @info[:request_status] == 'approved' %>
+==========================================
+ <%= I18n.t("mails_notifications.request_to_join.request_title", team: @info[:team].name) %>
+==========================================
 <% end %>
+
+<%= 
+  I18n.t("mails_notifications.request_to_join.#{@info[:request_status]}_text",
+      team: @info[:team].name,
+      app_name: CONFIG['app_name'],
+      url: @info[:url]
+    )
+%>
+
+<% if @info[:request_status] == 'approved' %>
+ ...
+
+ <%= I18n.t("mails_notifications.request_to_join.team_button") %>
+ <%= @info[:url] %>
+
+...
+<% end %>
+
+<%= strip_tags I18n.t("mails_notifications.copyright_html", app_name: CONFIG['app_name']) %>
+https://meedan.com
