--- a/app/views/devise_mailer/confirmation_instructions.text.erb
+++ b/app/views/devise_mailer/confirmation_instructions.text.erb
@@ -1,5 +1,14 @@
-<%= I18n.t(:mail_view_welcome, app_name: CONFIG['app_name']) %>, <%= @resource.name %>!
+<%= I18n.t("mails_notifications.greeting", username: @resource.name) %>
+
+==========================================
+<%= I18n.t(:mail_view_welcome, app_name: CONFIG['app_name']) %>
+==========================================
 
 <%= I18n.t(:mail_view_register, app_name: CONFIG['app_name']) %>
 
 <%= confirmation_url(@resource, host: @host, confirmation_token: @resource.confirmation_token, client_host: @client_host) %>
+
+...
+
+<%= strip_tags I18n.t("mails_notifications.copyright_html", app_name: CONFIG['app_name']) %>
+https://meedan.com
