--- a/app/views/admin_mailer/notify_import_completed.html.erb
+++ b/app/views/admin_mailer/notify_import_completed.html.erb
@@ -1,9 +1,97 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
-  </head>
-  <body>
-    <%= simple_format(I18n.t(:team_import_completed_mail, worksheet_url: @worksheet_url, app_name: @app_name)) %>
-  </body>
-</html>
+<%= render "shared/header" %>
+
+  <style>
+    @media only screen and (max-width: 481px) {
+      .notify-title a {
+        display: block !important;
+        width: auto !important;
+      }
+    }
+
+
+    @media only screen and (max-width: 601px) {
+      .notify-title__content {
+        padding: 0 30px;
+      }
+    }
+
+
+    @media only screen and (max-width: 481px) {
+      .notify-title__content {
+        padding: 0 !important;
+      }
+    }
+  </style>
+
+  <!--~~// Notify-title module start \\~~-->
+  <!--————————————————————————————-->
+  <div class="notify-title" style="text-align: left !important;">
+    <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+      <tr>
+        <td style="border-collapse: collapse; font-size: 44px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+      </tr>
+    </table>
+    <div class="container " width="600" style="margin: 0 auto; text-align: left; width: 600px;">
+      <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
+                <tr>
+                  <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="left">
+                    <div class="notify-title__content">
+                      <div class="h3 notify-title__proj" style="font-size: 21px; letter-spacing: -0.2px; line-height: 29px;">
+                        <%= I18n.t("mails_notifications.greeting_anonymous") %>
+                      </div>
+                      <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                        <tr>
+                          <td style="border-collapse: collapse; font-size: 13px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+                        </tr>
+                      </table>
+                      <div class="h1 notify-title__header" style="font-size: 40px; font-weight: bold; letter-spacing: -0.8px; line-height: 40px;">
+                        <%= I18n.t("mails_notifications.admin_mailer.team_import_title") %>
+                      </div>
+                      <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                        <tr>
+                          <td style="border-collapse: collapse; font-size: 12px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+                        </tr>
+                      </table>
+                      <div class="text-gray" style="color: #757575 !important;">
+                        <div class="h3" style="font-size: 21px; letter-spacing: -0.2px; line-height: 30px;">
+                          <%= 
+                          	simple_format(
+                          		I18n.t("mails_notifications.admin_mailer.team_import_text",
+                          			app_name: CONFIG['app_name'], worksheet_url: @worksheet_url
+                          			)
+                          		)
+                          %>
+                        </div>
+                      </div>
+                    </div>
+                    
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                      <tr>
+                        <td style="border-collapse: collapse; font-size: 28px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+                      </tr>
+                    </table>
+
+                    <!--————————————————————————————-->
+                    <!--~~\\ Notify-title module end //~~-->
+
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                      <tr>
+                        <td style="border-collapse: collapse; font-size: 23px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+                      </tr>
+                    </table>
+                    <style>
+                      @media only screen and (max-width: 601px) {
+                        th.footer {
+                          padding: 0 30px !important;
+                        }
+                      }
+
+
+                      @media only screen and (max-width: 481px) {
+                        th.footer {
+                          padding: 0 !important;
+                        }
+                      }
+                    </style>
+
+<%= render "shared/footer" %>
