--- a/app/views/admin_mailer/notify_import_completed.text.erb
+++ b/app/views/admin_mailer/notify_import_completed.text.erb
@@ -1,1 +1,14 @@
-<%= I18n.t(:team_import_completed_mail, worksheet_url: @worksheet_url, app_name: @app_name) %>
+<%= I18n.t("mails_notifications.greeting_anonymous") %>
+
+==========================================
+ <%= I18n.t("mails_notifications.admin_mailer.team_import_title") %>
+==========================================
+
+<%= 
+  strip_tags I18n.t("mails_notifications.admin_mailer.team_import_text", app_name: CONFIG['app_name'], worksheet_url: @worksheet_url)
+%>
+
+...
+
+<%= strip_tags I18n.t("mails_notifications.copyright_html", app_name: CONFIG['app_name']) %>
+https://meedan.com
