--- a/app/views/devise_mailer/invitation_instructions.html.erb
+++ b/app/views/devise_mailer/invitation_instructions.html.erb
@@ -58,8 +58,16 @@
                            raw I18n.t("devise.mailer.invitation_instructions.someone_invited_you_#{@invited_type}.html", name: @invited_by, role: @role, team: link_to(@team.name, @url))
                           %>
                           <% if @invited_text %>
-                          	<br>
-														<%= @invited_text %>
+                            <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                              <tr>
+                                <td style="border-collapse: collapse; font-size: 15px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+                              </tr>
+                            </table>
+                            <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
+                              <tr>
+                                <td class="section__title" style="padding: 23px 30px;" bgcolor="#fff" align="left"><div class="span text" style="font-size: 15px; line-height: 15px;"><%= @invited_text %></div></td>
+                              </tr>
+                            </table>
 													<% end %>
                         </div>
                       </div>
