--- a/app/views/registration_mailer/duplicate_email_detection.text.erb
+++ b/app/views/registration_mailer/duplicate_email_detection.text.erb
@@ -1,1 +1,14 @@
-<%= I18n.t(@mail_body, user_email: @user.email, user_provider: @user_provider, duplicate_provider: @duplicate_provider, app_name: CONFIG['app_name'], support_email: CONFIG['support_email']) %>
+<%= I18n.t("mails_notifications.greeting_anonymous") %>
+
+==========================================
+<%= I18n.t("mails_notifications.duplicated.header_title") %>
+==========================================
+
+<%= 
+  strip_tags I18n.t("mails_notifications.duplicated.#{@body_key}", user_email: @user.email, user_provider: @user_provider, duplicate_provider: @duplicate_provider, app_name: CONFIG['app_name'], support_email: CONFIG['support_email']).html_safe
+%>
+
+...
+
+<%= strip_tags I18n.t("mails_notifications.copyright_html", app_name: CONFIG['app_name']) %>
+https://meedan.com
