Ticket #7500 - update copy for reset password template

--- a/app/views/devise_mailer/reset_password_instructions.text.erb
+++ b/app/views/devise_mailer/reset_password_instructions.text.erb
@@ -1,19 +1,19 @@
-<%= I18n.t('devise.mailer.reset_password_instructions.greeting', :recipient => @resource.email) %>
+<%= I18n.t('devise.mailer.reset_password_instructions.greeting', :recipient => @resource.name) %>
 
 ==========================================
- <%= @title %>
+ <%= I18n.t('devise.mailer.reset_password_instructions.header_title') %>
 ==========================================
 
 
-<%= strip_tags I18n.t('devise.mailer.reset_password_instructions.instruction', :expire => User.reset_password_within.to_i / 3600) %>
+<%= I18n.t('devise.mailer.reset_password_instructions.header_text', app_name: CONFIG['app_name']) %>
 
 <%= I18n.t('devise.mailer.reset_password_instructions.action') %>
 <%= "#{CONFIG['checkdesk_client']}/check/user/password-change?reset_password_token=#{@token}" %>
 
  ...
 
- <%= t('devise.mailer.reset_password_instructions.instruction_2') %>
- <%= t('devise.mailer.reset_password_instructions.instruction_3') %>
+ <%= t('devise.mailer.reset_password_instructions.instruction', expire: User.reset_password_within.to_i / 3600) %>
+ <%= t('devise.mailer.reset_password_instructions.instruction_2', support_email: CONFIG['support_email']) %>
 
 ...
 
