--- a/app/views/devise_mailer/reset_password_instructions.html.erb
+++ b/app/views/devise_mailer/reset_password_instructions.html.erb
@@ -37,7 +37,7 @@
                   <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="left">
                     <div class="notify-title__content">
                       <div class="h3 notify-title__proj" style="font-size: 21px; letter-spacing: -0.2px; line-height: 29px;">
-                        <%= I18n.t('devise.mailer.reset_password_instructions.greeting', :recipient => @resource.email) %>
+                        <%= I18n.t('devise.mailer.reset_password_instructions.greeting', :recipient => @resource.name) %>
                       </div>
                       <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                         <tr>
@@ -45,7 +45,7 @@
                         </tr>
                       </table>
                       <div class="h1 notify-title__header" style="font-size: 40px; font-weight: bold; letter-spacing: -0.8px; line-height: 40px;">
-                        <%= @title %>
+                        <%= I18n.t('devise.mailer.reset_password_instructions.header_title') %>
                       </div>
                       <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                         <tr>
@@ -55,7 +55,7 @@
                       <div class="text-gray" style="color: #757575 !important;">
                         <div class="h3" style="font-size: 21px; letter-spacing: -0.2px; line-height: 30px;">
                           <%= 
-                            I18n.t('devise.mailer.reset_password_instructions.instruction', :expire => User.reset_password_within.to_i / 3600).html_safe
+                            I18n.t('devise.mailer.reset_password_instructions.header_text', app_name: CONFIG['app_name'])
                           %>
                         </div>
                       </div>
@@ -104,9 +104,9 @@
 
                       <div class="text-gray" style="color: #757575 !important;">
                         <div class="h3" style="font-size: 21px; letter-spacing: -0.2px; line-height: 30px;">
-                          <%= t('devise.mailer.reset_password_instructions.instruction_2') %>
+                          <%= t('devise.mailer.reset_password_instructions.instruction', expire: User.reset_password_within.to_i / 3600) %>
                           <br>
-                          <%= t('devise.mailer.reset_password_instructions.instruction_3') %>
+                          <%= t('devise.mailer.reset_password_instructions.instruction_2', support_email: CONFIG['support_email']) %>
                         </div>
                       </div>
 
