Copy changes for Smooch bot, email notifications

--- a/app/views/devise_mailer/reset_password_instructions.html.erb
+++ b/app/views/devise_mailer/reset_password_instructions.html.erb
@@ -37,7 +37,7 @@
                   <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="left">
                     <div class="notify-title__content">
                       <div class="h3 notify-title__proj" style="font-size: 21px; letter-spacing: -0.2px; line-height: 29px;">
-                        <%= I18n.t('devise.mailer.reset_password_instructions.greeting', :recipient => @resource.name) %>
+                        <%= t('devise.mailer.reset_password_instructions.greeting', :recipient => @resource.name) %>
                       </div>
                       <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                         <tr>
@@ -45,7 +45,7 @@
                         </tr>
                       </table>
                       <div class="h1 notify-title__header" style="font-size: 40px; font-weight: bold; letter-spacing: -0.8px; line-height: 40px;">
-                        <%= I18n.t('devise.mailer.reset_password_instructions.header_title') %>
+                        <%= t('devise.mailer.reset_password_instructions.header_title') %>
                       </div>
                       <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                         <tr>
@@ -54,13 +54,11 @@
                       </table>
                       <div class="text-gray" style="color: #757575 !important;">
                         <div class="h3" style="font-size: 21px; letter-spacing: -0.2px; line-height: 30px;">
-                          <%= 
-                            I18n.t('devise.mailer.reset_password_instructions.header_text', app_name: CONFIG['app_name'])
-                          %>
+                          <%= t('devise.mailer.reset_password_instructions.header_text', app_name: CONFIG['app_name']) %>
                         </div>
                       </div>
                     </div>
-                    
+
                     <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                       <tr>
                         <td style="border-collapse: collapse; font-size: 28px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
@@ -80,12 +78,9 @@
                               <tr>
                                 <td style="border-collapse: collapse; padding-right: 14px;">
                                   <span class="span" style="font-size: 17px; font-weight: bold; line-height: 20px;">
-                                    <%=
-                                      link_to(I18n.t('devise.mailer.reset_password_instructions.action'),
+                                    <%= link_to(t('devise.mailer.reset_password_instructions.action'),
                                           CONFIG['checkdesk_client'] + '/check/user/password-change?reset_password_token=' + @token,
-                                          :style => "text-decoration: none !important;color: #fff !important;"
-                                        )
-                                    %>
+                                          :style => 'text-decoration: none !important;color: #fff !important;') %>
                                   </span>
                                 </td>
                                 <td style="border-collapse: collapse;" align="right"><img src="https://images.ctfassets.net/g118h5yoccvd/1ji47bOy90143djFnEPuj1/936ebe3388362a7861715a1b819b231b/arrow_3x.png" alt="arrow-icon" width="7" style="-ms-interpolation-mode: bicubic; border: 0 none; height: auto; line-height: 100%; outline: none; text-decoration: none;">
@@ -104,7 +99,9 @@
 
                       <div class="text-gray" style="color: #757575 !important;">
                         <div class="h3" style="font-size: 21px; letter-spacing: -0.2px; line-height: 30px;">
-                          <%= t('devise.mailer.reset_password_instructions.instruction', expire: User.reset_password_within.to_i / 3600) %>
+                          <%= t('devise.mailer.reset_password_instructions.expiry', expire: User.reset_password_within.to_i / 3600) %>
+                          &nbsp;
+                          <%= link_to(t('devise.mailer.reset_password_instructions.instruction_1'), CONFIG['checkdesk_client'] + '/check/user/password-change') %>
                           <br>
                           <%= t('devise.mailer.reset_password_instructions.instruction_2', support_email: CONFIG['support_email']) %>
                         </div>
