--- a/app/views/admin_mailer/send_download_link.html.erb
+++ b/app/views/admin_mailer/send_download_link.html.erb
@@ -54,11 +54,11 @@
                       </table>
                       <div class="text-gray" style="color: #757575 !important;">
                         <div class="h3" style="font-size: 21px; letter-spacing: -0.2px; line-height: 30px;">
-                          <%= I18n.t("mails_notifications.admin_mailer.project_export_#{@type}_text", project: @project, link: @link) %>
+                          <%= I18n.t("mails_notifications.admin_mailer.project_export_#{@type}_text", project: @project, link: @link, team: @team) %>
                         </div>
                       </div>
                     </div>
-                    
+
                     <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                       <tr>
                         <td style="border-collapse: collapse; font-size: 28px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
